src/styles.scss
/* You can add global styles to this file, and also import other style files */

/*
 * overwrite bootstrap variables
 *
 * see:
 * https://stackoverflow.com/questions/43394110/how-to-customise-bootstrap-4-scss-variables-using-angular-cli-ng-bootstrap
 * https://javascript.plainenglish.io/step-by-step-guide-to-upgrade-your-angular-app-from-css-to-scss-fb347330fe28
 */

// variables to change
$primary: LightSeaGreen;
$secondary: SlateGray;

$min-contrast-ratio: 2.5;

// import bootstrap styles (with overwritten values from above)
@import '~bootstrap/scss/bootstrap';

/*
 * colors
 */

.color-red {
  color: red;
}

/*
 * accordion buttons
 */

.accordion-button, .accordion-button:not(.collapsed) {
  background-color: var(--bs-primary);
  color: black !important;
}

.accordion-button:not(.collapsed) {
  font-weight: bold;
}

/*
 * outer elements
 */

:root {
  --info-hover: #138496;
}

html, body {
  background: ghostwhite;
}

/*
 * remove button focus outlines
 */

.btn:focus {
  box-shadow: none;
}

/*
 * accordion buttons
 */

.bg-info > button {
  color: white;
}

.bg-info > button:hover {
  color: white;
  font-weight: bold;
  text-decoration-line: underline;
}

/*
 * modals
 */
.modal-content {
  padding: 1em;
}

.component-host-scrollable {
  overflow-y: auto !important;
}

.modal-table, .modal-error, .modal-buttons {
  width: 95%;
  align-self: center;
}

.modal-table td, .modal-table th {
  vertical-align: middle;
}

/*
 * alignment
 */

.vertical-align-middle {
  vertical-align: middle;
}

/*
 * width
 */
.w-90 {
  width: 90%;
}

/*
 * play quiz
 */

.answerbtn-correct, .answerbtn-correct:disabled {
  background-color: var(--bs-green);
  opacity: 100%;
}

.answerbtn-wrong, .answerbtn-wrong:disabled {
  background-color: var(--bs-danger);
  opacity: 100%;
}

